[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rmview"
description = "rMview: a fast live viewer for reMarkable"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.8"
authors = [
    { name = "bordaigorl", email = "emanuele.dosualdo@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Framework :: Hatch",
    "Framework :: Twisted",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",

]
keywords = [
    "reMarkable",
    "reMarkable-tablet",
    "pyqt5",
    "vnc",
    "stream",
    "mirror",
    "ssh",
]
dependencies = [
    "paramiko",
    "pyjwt",
    "pyqt5",
    "twisted[tls]",
]
dynamic = ["version"]

[project.optional-dependencies]
tunnel = [
    "sshtunnel",
]

[project.urls]
Source = "https://github.com/bordaigorl/rmview"
Tracker = "https://github.com/bordaigorl/rmview/issues"
Discussions = "https://github.com/bordaigorl/rmview/discussions"
Demo = "https://www.reddit.com/r/RemarkableTablet/comments/gtjrqt/rmview_now_with_support_for_vnc/"

[project.gui-scripts]
rmview = "rmview.rmview:rmViewMain"

[tool.hatch.version]
path = "src/rmview/__about__.py"

[tool.hatch.envs.default]
path=".venv"
dependencies = [
    "black",
    "ruff",
    "mypy",
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.hatch.build]
artifacts = [
    "src/rmview/resources.py"  # Generated by custom build hook below
]

[tool.hatch.build.hooks.custom]
dependencies = ["pyqt5"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/rmview"]

[tool.pytest.ini_options]
addopts="-n4 --cov"

[tool.ruff]
line-length = 120
select = [
  "A",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]